# Gazebo_simulation

./: .gitignore  COMMANDS_REFERENCE.md  DOCKER_COMPLETE.md  DOCKER_SETUP.md  LICENSE  PROJECT_COMPLETE.md  PROJECT_SUMMARY.md  README.md  p2.txt  requirements.txt
config/: flight_params.yaml  low_spec_params.yaml  ultra_minimal_params.yaml  vision_params.yaml
docker/: DOCKER_QUICK_START.md  Dockerfile  README.md  TROUBLESHOOTING.md  build_custom_image.bat  container_setup.sh  docker_build_and_run.bat  docker_run.bat  start_xserver.bat
docs/: ALGORITHMS.md  QUICKSTART.md  REPORT_TEMPLATE.md  TESTING.md
scripts/: analyze_mission.py  build_workspace.sh  generate_pdf_report.sh  integration_test.sh  performance_monitor.py  prepare_github_repo.sh  record_demo.sh  run_tests.sh  setup.sh
src/: CMakeLists.txt
src/uav_control/: CMakeLists.txt  package.xml
src/uav_control/launch/: flight_controller.launch
src/uav_control/nodes/: flight_controller.py  mission_manager.py
src/uav_engagement/: CMakeLists.txt  package.xml
src/uav_engagement/launch/: engagement.launch
src/uav_engagement/nodes/: engagement_controller.py
src/uav_msgs/: CMakeLists.txt  package.xml
src/uav_msgs/msg/: Detection.msg  DetectionArray.msg  MissionStatus.msg  TargetState.msg  UAVState.msg
src/uav_msgs/srv/: EngageTarget.srv
src/uav_simulation/: CMakeLists.txt  package.xml
src/uav_simulation/config/: mission.rviz
src/uav_simulation/launch/: battlefield.launch  full_mission.launch  low_spec_mission.launch  visualization.launch
src/uav_simulation/models/tank/: model.config  model.sdf
src/uav_simulation/models/uav_with_camera/: model.config  model.sdf
src/uav_simulation/worlds/: battlefield.world
src/uav_vision/: CMakeLists.txt  package.xml
src/uav_vision/launch/: detection_tracking.launch
src/uav_vision/nodes/: object_detector.py  object_tracker.py  vision_manager.py
