<?xml version="1.0"?>
<package format="2">
  <name>uav_control</name>
  <version>1.0.0</version>
  <description>Flight controller for autonomous UAV navigation and target approach</description>

  <maintainer email="user@example.com">UAV Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>uav_msgs</depend>
  <depend>tf</depend>
  <depend>hector_quadrotor_controller</depend>

</package>

