<?xml version="1.0"?>
<package format="2">
  <name>uav_engagement</name>
  <version>1.0.0</version>
  <description>Target engagement system for UAV</description>

  <maintainer email="user@example.com">UAV Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>uav_msgs</depend>

</package>

