<?xml version="1.0"?>
<package format="2">
  <name>uav_vision</name>
  <version>1.0.0</version>
  <description>Computer vision pipeline for UAV target detection and tracking</description>

  <maintainer email="user@example.com">UAV Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>rospy</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>uav_msgs</depend>
  <depend>tf</depend>

  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>

</package>

